# Honkai-Star-Rust

./: NOTES.md  components.json  gen-schemas.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  update-assets.js  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: characters.rs  damage.rs  data.gen.rs  data.rs  lightcones.rs  main.rs  promotions.rs  relics.rs  scans.rs
src-tauri/src/characters/: common.rs  jingliu.rs  sparkle.rs
src-tauri/src/data/: character_promotions.json  character_skill_trees.json  character_skills.json  characters.json  light_cone_promotions.json  light_cone_ranks.json  light_cones.json  relic_main_affixes.json  relic_sets.json  relic_sub_affixes.json
src-tauri/src/data/scans/: test.json
src-tauri/src/lightcones/: common.rs  earthly_escapade.rs  i_shall_be_my_own_sword.rs
src-tauri/src/relics/: band_of_sizzling_thunder.rs  cavern.rs  champion_of_streetwise_boxing.rs  eagle_of_twilight_line.rs  firesmith_of_lava_forging.rs  genius_of_brilliant_stars.rs  guard_of_wuthering_snow.rs  hunter_of_glacial_forest.rs  knight_of_purity_palace.rs  longevous_disciple.rs  messenger_traversing_hackerspace.rs  musketeer_of_wild_wheat.rs  ornament.rs  passerby_of_wandering_cloud.rs  prisoner_in_deep_confinement.rs  space_sealing_station.rs  the_ashblazing_grand_duke.rs  thief_of_shooting_meteor.rs  wastelander_of_banditry_desert.rs
src-tauri/src/relics/cavern/: band_of_sizzling_thunder.rs  champion_of_streetwise_boxing.rs  eagle_of_twilight_line.rs  (+15 more)
src-tauri/src/util/: deserialize.rs
(+55 files in other folders)
