[package]
name = "honkai-star-rust"
version = "0.0.0"
description = "Honkai: Star Rust"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
codegen = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
specta = "=2.0.0-rc.7"
tauri-specta = { version = "=2.0.0-rc.4", features = ["javascript", "typescript"] }
lazy_static = "1.4.0"
serde_tuple = "0.5.0"
assert_float_eq = "1.1.3"
uuid = { version = "1.7.0", features = ["v4"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
